# AA3

./: .env.example  .gitignore  CONSENSUS_MODES.md  DEMO_AAV3_REAL.md  README.md  debug_codex_output.txt  test_py_prompt.txt
configs/: deliberation.yaml  limits.yaml  policy.yaml
docs/: AAV2.5_COMPLETE_SYSTEM.md  AAV2.5_DELIVERY_COMPLETE.md  AAV2_DELIVERY_SUMMARY.md  AAV2_SYSTEM_OVERVIEW.md  AAV3_DELIBERATIVE_SYSTEM.md  AAv3_REAL_System_Documentation.md  AGENT_ADOPTION_FIX_SUMMARY.md  AI2AI.md  AI2AI2.md  BUGS_FIXED_2025-10-29.md  CRITICAL_ISSUES_DFL_BUILD.md  CRITICAL_SYSTEM_FLAWS.md  DATASET_PROMOTION.md  DFL_BUILD_MONITORING_PASSTHROUGH_TEST.md  DIRECT_ACTION_MODE.md  DIRECT_ACTION_OPS_CARD.md  FINAL_REPORT_DFL_BUILD.md  LLM_CONFIGURATION.md  MULTI_AGENT_RESEARCH_2025.md  PLANNING_VS_EXECUTION_BIAS.md  STATUS_2025-10-29.md  TIMEOUT_PHILOSOPHY.md  agent_passthrough_mode.md  agentic_execution_analysis.md  agentic_monitoring_dfl_build.md  conversation_persistence.md  orchestrated_execution_implementation.md
patch/: README_DROPIN.md
plans/: hunt_plan.json  passthrough_test_plan.json  reviewed_plan.json  small_test_plan.json
reports/: AAV3_REAL_STATUS.md  agentic_execution.json  agentic_execution_v2.json  codex_diagnostic_response.md  conversation.jsonl  deliberation_summary.json  ledger.jsonl  (+3 more)
reports/aav3_real_sessions/aav3_real_50929c7c/workspace/: README.md  pyproject.toml
reports/aav3_real_sessions/aav3_real_50929c7c/workspace/src/custodire_factorial/: __init__.py  factorial.py
reports/aav3_real_sessions/aav3_real_50929c7c/workspace/tests/: test_factorial.py
(+235 files in other folders)
