[build-system]
requires = ['hatchling>=1.18.0']
build-backend = 'hatchling.build'

[project]
name = 'custodire-factorial'
version = '0.1.0'
description = 'Iterative factorial with strict input validation and doctests.'
readme = 'README.md'
requires-python = '>=3.10'
authors = [{ name = 'Custodire System', email = 'devnull@example.com' }]
license = { text = 'Proprietary' }
classifiers = [
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Typing :: Typed',
]

[tool.pytest.ini_options]
testpaths = ['tests']
python_files = ['test_*.py']
